# whisperapy-mac

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py  transcribe.py
app/core/: error_handler.py  exceptions.py  logging.py  middleware.py
app/schemas/: transcription.py
app/services/: media.py  transcriber.py
app/utils/: file_handler.py
docs/: prod-deploy.md  whisperapy-mac-design.md
tests/: conftest.py
tests/integration/: test_health.py  test_transcribe.py
tests/unit/: test_config.py  test_file_handler.py  test_transcriber.py
