[project]
name = "whisperapy-mac"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "mlx-whisper",
  "ffmpeg-python",
  "python-multipart",
  "pydantic-settings",
  "loguru",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
